# GHC-COMPILER-PYTHON

./: .gitignore  DEPLOYMENT_OPERATIVE_PLAN.md  LICENSE  MANIFEST.in  Packaging GHC with Python Wheels.md  README.md  WHITEPAPER.md  commit_body.txt  fetch_binaries.sh  fix_test.py  hatch_build.py  mmap_test2.py  optimize_binaries.sh  patch_inline.py  patch_merge.py  patch_script.py  patch_settings.py  patch_test.py  patch_test2.py  patch_walrus.py  patch_wrapper.py  pyproject.toml  test.conf  test_alchemist.py  test_getattr.py  test_getattr2.py  test_getattr3.py  test_lambda.py  test_mmap.py  test_script.py
.github/workflows/: build.yml
.jules/: alchemist.md  alchemist_queue.md  architect.md  architect_queue.md  bolt.md  bolt_queue.md  cortex.md  cortex_queue.md  crucible.md  crucible_queue.md  forge.md  ouroboros.md  ouroboros_queue.md  palette.md  palette_queue.md  sentinel.md  sentinel_queue.md
ghc_compiler_python/: __init__.py  wrapper.py
scripts/: fetch_binaries.sh  fix_macos_rpaths.sh  generate_workflow.py  optimize_binaries.sh  patch_ghc_paths.py
src/ghc_compiler/: __about__.py  __init__.py
tests/: conftest.py  test_e2e.py  test_paths_with_spaces.py  test_wrapper.py
