# pyproject.toml — ghc-compiler-python v9.4.8
# PEP 621 compliant, PEP 427 wheel packaging, Hatchling build backend

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "ghc-compiler-python"
version = "9.4.8"
description = "Native GHC 9.4.8 compiler and Cabal 3.10.3.0 tooling packaged as an isolated Python Wheel"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
	{name = "ghc-compiler-python contributors"},
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Operating System :: POSIX :: Linux",
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Haskell",
	"Programming Language :: Python :: 3",
	"Topic :: Software Development :: Compilers",
	"Topic :: Software Development :: Build Tools",
]
dependencies = []
dynamic = ["scripts"]

[tool.hatch.metadata.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
strict-naming = true

# Map executables to the Venv PATH (bin)
[tool.hatch.build.targets.wheel.shared-scripts]
"ghc-bindist/bin" = "/"

# FIX UNIX v2: Map lib and share to the Venv.
# Hatchling shared-data maps to <venv>/<key> on install.
[tool.hatch.build.targets.wheel.shared-data]
"ghc-bindist/lib" = "lib"
"ghc-bindist/share" = "share"
"ghc-bindist/mingw" = "mingw"
"ghc-bindist/settings" = "settings"
"ghc-bindist/package.conf.d" = "package.conf.d"

[tool.hatch.build.targets.sdist]
include = [
	"/scripts/",
	"/tests/",
	"/README.md",
	"/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]